@@ -1,31 +1,21 @@
 package io.mosip.kernel.biosdk.provider.test;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.hamcrest.MatcherAssert;
 import org.junit.Before;
 import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit4.SpringRunner;
-
-import com.sun.source.tree.AssertTree;
 
 import io.mosip.kernel.biometrics.constant.BiometricFunction;
 import io.mosip.kernel.biometrics.constant.BiometricType;
@@ -95,7 +85,7 @@ public class BioProviderImpl_V_0_9Test  {
 		format.setOrganization("257");
 		format.setType("7");
 		QualityType Qtype = new QualityType();
-		Qtype.setScore(new Long(100));
+		Qtype.setScore(Long.valueOf(100));
 		RegistryIDType algorithm = new RegistryIDType();
 		algorithm.setOrganization("HMAC");
 		algorithm.setType("SHA-256");
@@ -324,7 +314,7 @@ public class BioProviderImpl_V_0_9Test  {
 		smp=sample.toArray(smp);
 		gallery.put("check", record);
 		float[] result= bioProviderImpl_V_0_9.getSegmentQuality(smp,modalityParams);
-        assertThat(result[0],is(90.0F));
+		MatcherAssert.assertThat(result[0],is(90.0F));
 	}
 	
 	@Test
@@ -341,7 +331,7 @@ public class BioProviderImpl_V_0_9Test  {
 		smp=sample.toArray(smp);
 		gallery.put("check", record);
 		Map<BiometricType, Float> result= bioProviderImpl_V_0_9.getModalityQuality(smp,modalityParams);
-        assertThat(result.get(BiometricType.FINGER),is(90.0F));
+		MatcherAssert.assertThat(result.get(BiometricType.FINGER),is(90.0F));
 	}
 	
 	@Test
@@ -358,7 +348,7 @@ public class BioProviderImpl_V_0_9Test  {
 		smp=sample.toArray(smp);
 		gallery.put("check", record);
 		float[] result= bioProviderImpl_V_0_9.getSegmentQuality(smp,modalityParams);
-        assertThat(result[0],is(0F));
+		MatcherAssert.assertThat(result[0],is(0F));
 	}
 	
 	@Test
@@ -375,7 +365,7 @@ public class BioProviderImpl_V_0_9Test  {
 		smp=sample.toArray(smp);
 		gallery.put("check", record);
 		Map<BiometricType, Float> result= bioProviderImpl_V_0_9.getModalityQuality(smp,modalityParams);
-        assertThat(result.get(BiometricType.FINGER),is(0F));
+		MatcherAssert.assertThat(result.get(BiometricType.FINGER),is(0F));
 	}
 	
 	@Test
@@ -390,7 +380,7 @@ public class BioProviderImpl_V_0_9Test  {
 		Map<String, List<BIR>> gallery= new HashMap<String, List<BIR>>();
 		gallery.put("check", record);
 		List<BIR> result= bioProviderImpl_V_0_9.extractTemplate(sample,modalityParams);
-        assertThat(result.size(),is(sample.size()));
+		MatcherAssert.assertThat(result.size(),is(sample.size()));
 	}
 	
 	@Test
@@ -405,7 +395,7 @@ public class BioProviderImpl_V_0_9Test  {
 		Map<String, List<BIR>> gallery= new HashMap<String, List<BIR>>();
 		gallery.put("check", record);
 		List<BIR> result= bioProviderImpl_V_0_9.extractTemplate(sample,modalityParams);
-        assertThat(result.size(),is(0));
+		MatcherAssert.assertThat(result.size(),is(0));
 	}
 
 
